--- a/src/components/du/blessing-bg.css
+++ b/src/components/du/blessing-bg.css
@@ -1,29 +1,69 @@
 .data-\[pressed\]\:blessing-blue[data-pressed],
 .blessing-blue {
-    background: linear-gradient(0.49turn, #40456D, #487ABC);
+  background: linear-gradient(0.49turn, #40456daf, #487abcff);
+}
+
+.blessing-blue-up {
+  background: radial-gradient(
+      circle,
+      rgb(109, 171, 252, 0.71) 20%,
+      rgba(255, 255, 255, 0)
+    ), linear-gradient(0.49turn, #40456d, #487abc);
 }
 
 .data-\[pressed\]\:blessing-gold[data-pressed],
 .blessing-gold {
-    background: linear-gradient(0.49turn, #936159, #C7A671);
+  background: linear-gradient(0.49turn, #936159, #c7a671);
+}
+
+.blessing-gold-up {
+  background: radial-gradient(
+      circle,
+      rgba(255, 210, 141, 0.71) 20%,
+      rgba(255, 255, 255, 0)
+    ), linear-gradient(0.49turn, #936159, #c7a671);
 }
 
 .data-\[pressed\]\:blessing-gray[data-pressed],
 .blessing-gray {
-    background: linear-gradient(0.49turn, #434553, #818186);
+  background: linear-gradient(0.49turn, #434553, #818186);
+}
+
+.blessing-gray-up {
+  background: radial-gradient(
+      circle,
+      rgba(185, 185, 185, 0.71) 20%,
+      rgba(255, 255, 255, 0)
+    ), linear-gradient(0.49turn, #434553, #818186);
 }
 
 .data-\[pressed\]\:blessing-ultimate[data-pressed],
 .blessing-ultimate {
-    background: linear-gradient(0.49turn, #93734C, #FFFFAA);
+  background: linear-gradient(0.49turn, #93734c, #ffffaa);
+}
+
+.blessing-ultimate-up {
+  background: radial-gradient(
+      circle,
+      rgba(255, 241, 162, 0.71) 20%,
+      rgba(255, 255, 255, 0)
+    ), linear-gradient(0.49turn, #93734c, #ffffaa);
 }
 
 .data-\[pressed\]\:blessing-purple[data-pressed],
 .blessing-purple {
-    background: linear-gradient(0.49turn, #444069, #9467CB);
+  background: linear-gradient(0.49turn, #444069, #9467cb);
+}
+
+.blessing-purple-up {
+  background: radial-gradient(
+      circle,
+      rgba(203, 112, 255, 0.71) 20%,
+      rgba(255, 255, 255, 0)
+    ), linear-gradient(0.49turn, #444069, #9467cb);
 }
 
 .data-\[pressed\]\:blessing-desc[data-pressed],
 .blessing-desc {
-    background: linear-gradient(0.49turn, #406946, #67cbad);
+  background: linear-gradient(0.49turn, #406946, #67cbad);
 }
