add icon for buff

--- a/src/components/du/blessing-bg.css
+++ b/src/components/du/blessing-bg.css
@@ -1,6 +1,6 @@
 .data-\[pressed\]\:blessing-blue[data-pressed],
 .blessing-blue {
-  background: linear-gradient(0.49turn, #40456daf, #487abcff);
+  background: linear-gradient(0.49turn, #40456d, #487abc);
 }
 
 .blessing-blue-up {
