--- a/src/components/du/blessing-bg.css
+++ b/src/components/du/blessing-bg.css
@@ -5,9 +5,9 @@
 
 .blessing-blue-up {
   background: radial-gradient(
-      circle,
+      circle at bottom,
       rgb(109, 171, 252, 0.71) 20%,
-      rgba(255, 255, 255, 0)
+      transparent
     ), linear-gradient(0.49turn, #40456d, #487abc);
 }
 
@@ -18,9 +18,9 @@
 
 .blessing-gold-up {
   background: radial-gradient(
-      circle,
-      rgba(255, 210, 141, 0.71) 20%,
-      rgba(255, 255, 255, 0)
+      circle at bottom,
+      rgba(245, 203, 140, 0.71) 20%,
+      transparent
     ), linear-gradient(0.49turn, #936159, #c7a671);
 }
 
@@ -31,9 +31,9 @@
 
 .blessing-gray-up {
   background: radial-gradient(
-      circle,
+      circle at bottom,
       rgba(185, 185, 185, 0.71) 20%,
-      rgba(255, 255, 255, 0)
+      transparent
     ), linear-gradient(0.49turn, #434553, #818186);
 }
 
@@ -44,9 +44,9 @@
 
 .blessing-ultimate-up {
   background: radial-gradient(
-      circle,
+      circle at bottom,
       rgba(255, 241, 162, 0.71) 20%,
-      rgba(255, 255, 255, 0)
+      transparent
     ), linear-gradient(0.49turn, #93734c, #ffffaa);
 }
 
@@ -57,9 +57,9 @@
 
 .blessing-purple-up {
   background: radial-gradient(
-      circle,
+      circle at bottom,
       rgba(203, 112, 255, 0.71) 20%,
-      rgba(255, 255, 255, 0)
+      transparent
     ), linear-gradient(0.49turn, #444069, #9467cb);
 }
 
