chore: update style, remove drop shadow

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@
 </footer>
 
 <dialog id="dialog" class="dialog">
-    <h3>关于</h3>
+    <h3 class="text-fg">关于</h3>
     <p>已经更新至 2.7 版本.</p>
     <p>
         本网站源码可在{" "}
@@ -18,17 +18,13 @@
             href="https://github.com/widcardw/hsr-du-tools"
             target="_blank"
             rel="noreferrer"
-        >
-            GitHub
-        </a>{" "}
+        >GitHub</a>{" "}
         查看，若有任何建议或问题，包括但不限于：样式问题、适配问题、Tag 校对，请于{" "}
         <a
             href="https://github.com/widcardw/hsr-du-tools/issues"
             target="_blank"
             rel="noreferrer"
-        >
-            issue
-        </a>{" "}
+        >issue</a>{" "}
         板块反馈，或发送邮件到{" "}
         <a
             href="mailto:widcardw@foxmail.com"
@@ -36,6 +32,9 @@
             rel="noreferrer"
         >
             widcardw@foxmail.com</a>.
+    </p>
+    <p>
+        因大量使用 drop shadow 导致页面加载缓慢，已移除方程发光效果。
     </p>
     <p>
         使用技术栈：<a href="https://astro.build" target="_blank" rel="noreferrer">Astro</a>,{" "}
