--- a/src/pages/recommendations.astro
+++ b/src/pages/recommendations.astro
@@ -69,7 +69,7 @@ const recommendations: Recommendation[] = [
 
 <Layout title="推荐 差分宇宙模拟工具">
   <p class="text-fg-secondary text-sm text-center">
-    本页仅为常规打法推荐，不能作为包过攻略。
+    本页仅为常规打法推荐，不能作为包过攻略。<a href="https://github.com/widcardw/hsr-du-tools/discussions" target="_blank">阵容投稿</a>
   </p>
   {
     recommendations.map((r) => {
