update formula description

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,6 @@
 
 <dialog id="dialog" class="dialog">
     <h3 class="text-fg">关于</h3>
-    <p>已经更新至 2.7 版本.</p>
     <p>
         本网站源码可在{" "}
         <a
@@ -43,6 +42,7 @@
         <a href="https://netlify.com" target="_blank" rel="noreferrer">Netlify</a>.
     </p>
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
+    <p>本站最近更新时间：2024.12.3，方程奇物已经更新至 2.7 版本.</p>
 </dialog>
 
 <script>
