feat: add collections

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@
         <a href="https://netlify.com" target="_blank" rel="noreferrer">Netlify</a>.
     </p>
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
-    <p>本站最近更新时间：2024.12.3，方程奇物已经更新至 2.7 版本.</p>
+    <p>本站最近更新时间：2024.12.8，方程奇物已经更新至 2.7 版本.</p>
 </dialog>
 
 <script>
@@ -69,8 +69,8 @@
         @apply py-4rem;
     }
     button#dialogTrigger {
-        @apply bg-transparent border-none outline-none cursor-pointer text-1rem text-white;
-        @apply hover:text-blue;
+        @apply bg-transparent border-none outline-none cursor-pointer text-1rem;
+        @apply hover:text-fg-primary;
     }
     .dialog a {
         color: var(--fg);
