chore:remove bg image, use css

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,8 @@ const { title, className = '' } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<div id="stars2" />
+		<div id="stars3" />
 		<Header />
 		<main class={className}>
 			<slot />
