--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap";
+@import "./star.css";
 
 :root {
   --bg: #f5f5f5;
@@ -18,6 +19,8 @@
   --senary: #a855f7;
   --destructive: #9a3434;
   --destructive-hover: #b34c4c;
+
+  --bg-gradient: radial-gradient(ellipse at bottom, #7eabbe 0%, #ccd2f3 100%);
 }
 
 [data-theme="dark"] {
@@ -35,11 +38,15 @@
   --tertiary: #33d69f;
   --quaternary: #6a5af9;
   --quinary: #8b5cf6;
+
+  --bg-gradient: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
+
+
 
 html,
 body {
-  background-color: var(--bg);
+  background: var(--bg-gradient);
   color: var(--fg);
   margin: 0;
   padding: 0;
@@ -48,16 +55,6 @@ body {
   line-height: 1.5;
   font-weight: 400;
   scroll-behavior: smooth;
-}
-
-[data-theme="light"] body {
-  background: url("/bg-light.webp") no-repeat center center;
-  background-attachment: fixed;
-}
-
-[data-theme="dark"] body {
-  background: url("/bg.webp") no-repeat center center;
-  background-attachment: fixed;
 }
 
 a {
