--- a/src/pages/v2.7/blessings.astro
+++ b/src/pages/v2.7/blessings.astro
@@ -1,7 +1,7 @@
 ---
 import BlessingView from "@/components/BlessingCategory/BlessingView";
-import Layout from "../layouts/Layout.astro";
-import { BLESSINGS } from "@/libs/du/blessings";
+import Layout from "./ui/Layout2-7.astro";
+import { BLESSINGS } from "./data/blessings";
 import { sortAndSplitBlessings } from "@/libs/search/sort";
 
 const blessingCates = sortAndSplitBlessings(BLESSINGS);
