--- a/src/pages/v2.7/curios.astro
+++ b/src/pages/v2.7/curios.astro
@@ -1,7 +1,7 @@
 ---
 import CurioCategory from "@/components/CurioCategory";
-import Layout from "../layouts/Layout.astro";
-import { PARTITIONED_CURIOS } from "@/libs/du/curios";
+import Layout from "./ui/Layout2-7.astro";
+import { PARTITIONED_CURIOS } from "./data/curios";
 ---
 
 <Layout title="奇物 差分宇宙模拟工具">
