--- a/src/pages/v2.7/equations.astro
+++ b/src/pages/v2.7/equations.astro
@@ -1,6 +1,6 @@
 ---
-import { EQUATIONS } from "@/libs/du/equations";
-import Layout from "../layouts/Layout.astro";
+import { EQUATIONS } from "./data/equations";
+import Layout from "./ui/Layout2-7.astro";
 import EquationCategory from "@/components/EquationCategory";
 import { sortAndSplitEquations } from "@/libs/search/sort";
 
