fix import errors

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+import { lastUpdate, mainVersion } from '@/versions'
+---
+
 <footer>
     <button id="dialogTrigger">
         <div class="i-carbon-information"></div>
@@ -37,7 +41,7 @@
         <a href="https://netlify.com" target="_blank" rel="noreferrer">Netlify</a>.
     </p>
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
-    <p>本站最近更新时间：2024.12.8，方程奇物已经更新至 2.7 版本.</p>
+    <p>本站最近更新时间：{lastUpdate}，方程奇物已经更新至 {mainVersion} 版本.</p>
 </dialog>
 
 <script>
