--- a/src/pages/v2.7/recommendations.astro
+++ b/src/pages/v2.7/recommendations.astro
@@ -100,6 +100,7 @@ const recommendations: Recommendation[] = [
             <BlessingCategory
               blessings={foundBl}
               withTitle={false}
+              gain_map={GAIN_MAP}
               client:idle
             />
           )}
