--- a/src/pages/v3.1/_ui/Layout3-1.astro
+++ b/src/pages/v3.1/_ui/Layout3-1.astro
@@ -9,5 +9,6 @@ const { title } = Astro.props;
 
 <LayoutBase title={title}>
   <Header />
+  <p class="text-sm text-fg-secondary text-center">施工中，数据为内测版本，不保证准确</p>
   <slot />
 </LayoutBase>
