--- a/src/pages/v3.1/blessings.astro
+++ b/src/pages/v3.1/blessings.astro
@@ -3,10 +3,11 @@ import Layout from "./_ui/Layout3-1.astro";
 import BlessingView from "@/components/BlessingCategory/BlessingView";
 import { blessings } from "./_data/blessings";
 import { sortAndSplitBlessings } from "@/libs/search/sort";
+import {GAIN_MAP} from './_data/gains'
 
 const blessingCates = sortAndSplitBlessings(blessings);
 ---
 
 <Layout title="祝福 差分宇宙模拟工具">
-  <BlessingView blessingCategory={blessingCates} gain_map={{}} client:idle />
+  <BlessingView blessingCategory={blessingCates} gain_map={GAIN_MAP} client:idle />
 </Layout>
