chore: update readme

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,9 +32,6 @@ import { lastUpdate, mainVersion } from '@/versions'
             widcardw@foxmail.com</a>.
     </p>
     <p>
-        因大量使用 drop shadow 导致页面加载缓慢，已移除方程发光效果。
-    </p>
-    <p>
         使用技术栈：<a href="https://astro.build" target="_blank" rel="noreferrer">Astro</a>,{" "}
         <a href="https://solidjs.com" target="_blank" rel="noreferrer">Solidjs</a>,{" "}
         <a href="https://unocss.dev" target="_blank" rel="noreferrer">UnoCSS</a>,{" "}
@@ -42,6 +39,7 @@ import { lastUpdate, mainVersion } from '@/versions'
     </p>
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
     <p>本站最近更新时间：{lastUpdate}，方程奇物已经更新至 {mainVersion} 版本.</p>
+    <p><del>诚招愿意接手这个项目的小伙伴为爱发电帮忙维护.</del></p>
 </dialog>
 
 <script>
