--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,6 +40,7 @@ import { lastUpdate, mainVersion } from '@/versions'
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
     <p>本站最近更新时间：{lastUpdate}，方程奇物已经更新至 {mainVersion} 版本.</p>
     <p><del>诚招愿意接手这个项目的小伙伴为爱发电帮忙维护.</del></p>
+    <p>3.1 版本官方要出攻略啦😭😭本站的所有努力全部木大了😭😭</p>
 </dialog>
 
 <script>
