--- a/src/header/BaseHeader.astro
+++ b/src/header/BaseHeader.astro
@@ -3,4 +3,4 @@ import '@unocss/reset/normalize.css';
 import '../styles/global.css';
 ---
 
-<link rel="icon" type="image/svg+xml" href="/curio/1112.png.webp" />
+<link rel="icon" type="image/svg+xml" href="/curio/1112.webp" />
