--- a/src/header/BaseHeader.astro
+++ b/src/header/BaseHeader.astro
@@ -1,6 +1,7 @@
 ---
 import '@unocss/reset/normalize.css';
 import '../styles/global.css';
+import { faviconPath } from '@/versions';
 ---
 
-<link rel="icon" type="image/svg+xml" href="/curio/1112.webp" />
+<link rel="icon" type="image/svg+xml" href={faviconPath} />
