add width and height for images

--- a/src/pages/v3.1/_ui/PathEffectCard.astro
+++ b/src/pages/v3.1/_ui/PathEffectCard.astro
@@ -1,24 +1,26 @@
 ---
-import type { PathEffects } from "../_data/effects";
-import { PATH_MAP } from "@/libs/du/constants";
-import clsx from "clsx";
+import { Image } from 'astro:assets'
+import { PATH_MAP } from '@/libs/du/constants'
+import clsx from 'clsx'
+import type { PathEffects } from '../_data/effects'
 
 interface Props {
-  item: PathEffects;
+  item: PathEffects
 }
 
-const { item } = Astro.props;
+const { item } = Astro.props
 ---
 
 <div class="bg-bg rounded p-4 border border-solid border-bg-secondary">
-  <img
+  <Image
     src={`/path/${item._id}.webp`}
     alt={PATH_MAP[item._id]}
-    class={clsx("w-60px sm:w-80px md:w-100px block mx-auto", "light:invert")}
+    width="100"
+    height="100"
+    class={clsx("block mx-auto", "light:invert")}
   />
   <p class="font-bold">{item.E1.Name}</p>
   <p class="text-sm text-fg-secondary">{item.E1.Desc}</p>
   <p class="font-bold">{item.E2.Name}</p>
   <p class="text-sm text-fg-secondary">{item.E2.Desc}</p>
 </div>
-
