--- a/src/pages/v3.1/_ui/Header.astro
+++ b/src/pages/v3.1/_ui/Header.astro
@@ -21,7 +21,7 @@
   </a>
   <a href="/v3.1/titan" class="title-btn titan" title="泰坦">
     <div class="icon i-carbon-bastion-host"></div>
-    <span>泰坦</span>
+    <span>金血</span>
   </a>
   <!-- <a
     href="/v3.1/recommendations"
