--- a/src/pages/v3.1/_ui/TitanCard.astro
+++ b/src/pages/v3.1/_ui/TitanCard.astro
@@ -11,21 +11,26 @@ interface Props {
 const { item } = Astro.props
 ---
 
-<div class="bg-bg rounded p-4 border border-solid border-bg-secondary">
+<div class="flex flex-col gap-2">
   <Image
     src={`/titan/${item.Img.replace('.png', '')}.webp`}
     alt={item.Titan}
-    width="156.5"
-    height="242.5"
+    width="166"
+    height="208.8"
     class={clsx("block mx-auto")}
   />
   <p class="font-bold text-center">{item.Titan}</p>
   {
-    item.Blessings.map((i) => (
-      <>
-        <p class="font-bold">{i.Name}</p>
-        <p set:html={i.Desc} class="text-sm text-fg-secondary" />
-      </>
+    item.Blessings.map(({level, titan}) => (
+      <div class="bg-bg rounded border  border-solid border-bg-secondary">
+        <div class="bg-bg-secondary p-2 md:px-4">{level}</div>
+        {titan.map(it => (
+            <div class="p-2 md:px-4">
+                <div class="font-bold">{it.Name}</div>
+                <div set:html={it.Desc} class="text-sm text-fg-secondary" />
+            </div>
+        ))}
+      </div>
     ))
   }
 </div>
