--- a/src/pages/v2.7/_ui/Header.astro
+++ b/src/pages/v2.7/_ui/Header.astro
@@ -4,19 +4,19 @@
 
 <header class="flex items-center justify-center w-full py-2 gap-2">
   <a href="/v2.7" class="title-btn home" title="主页">
-    <div class="icon i-carbon-home"></div>
+    <div class="icon i-home"></div>
     <span>主页</span>
   </a>
   <a href="/v2.7/blessings" class="title-btn blessings" title="祝福">
-    <div class="icon i-carbon-carbon-for-ibm-product"></div>
+    <div class="icon i-blessing"></div>
     <span>祝福</span>
   </a>
   <a href="/v2.7/equations" class="title-btn equations" title="方程">
-    <div class="icon i-carbon-function-math"></div>
+    <div class="icon i-equation"></div>
     <span>方程</span>
   </a>
   <a href="/v2.7/curios" class="title-btn curios" title="奇物">
-    <div class="icon i-carbon-ticket"></div>
+    <div class="icon i-curio"></div>
     <span>奇物</span>
   </a>
   <a href="/v2.7/recommendations" class="title-btn recommendations" title="推荐">
@@ -72,5 +72,33 @@
   }
   .router-active {
     background: var(--bg-secondary-hover);
+  }
+  .i-home {
+    background: url('/header/icon-du.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-blessing {
+    background: url('/path/IconProfessionMemoryMiddle.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-curio {
+    background: url('/header/icon-curio.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-equation {
+    background: url('/header/icon-equation.png') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
   }
 </style>
