--- a/src/pages/v3.1/_ui/Header.astro
+++ b/src/pages/v3.1/_ui/Header.astro
@@ -1,18 +1,18 @@
 <header class="flex items-center justify-center w-full py-2 gap-2">
   <a href="/v3.1" class="title-btn home" title="主页">
-    <div class="icon i-carbon-home"></div>
+    <div class="icon i-home"></div>
     <span>主页</span>
   </a>
   <a href="/v3.1/blessings" class="title-btn blessings" title="祝福">
-    <div class="icon i-carbon-carbon-for-ibm-product"></div>
+    <div class="icon i-blessing"></div>
     <span>祝福</span>
   </a>
   <a href="/v3.1/equations" class="title-btn equations" title="方程">
-    <div class="icon i-carbon-function-math"></div>
+    <div class="icon i-equation"></div>
     <span>方程</span>
   </a>
   <a href="/v3.1/curios" class="title-btn curios" title="奇物">
-    <div class="icon i-carbon-ticket"></div>
+    <div class="icon i-curio light:invert"></div>
     <span>奇物</span>
   </a>
   <a href="/v3.1/effects" class="title-btn effects" title="特性">
@@ -74,4 +74,34 @@
   .router-active {
     background: var(--bg-secondary-hover);
   }
+  .i-home {
+    background: url('/header/icon-du.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-blessing {
+    background: url('/path/IconProfessionMemoryMiddle.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-equation {
+    background: url('/header/icon-equation.png') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+  .i-curio {
+    background: url('/header/icon-curio.webp') no-repeat center;
+    background-color: transparent;
+    background-size: 100% 100%;
+    height: 1em;
+    width: 1em;
+  }
+
+
 </style>
