--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,10 +35,12 @@ import { lastUpdate, mainVersion } from '@/versions'
         使用技术栈：<a href="https://astro.build" target="_blank" rel="noreferrer">Astro</a>,{" "}
         <a href="https://solidjs.com" target="_blank" rel="noreferrer">Solidjs</a>,{" "}
         <a href="https://unocss.dev" target="_blank" rel="noreferrer">UnoCSS</a>,{" "}
-        <a href="https://netlify.com" target="_blank" rel="noreferrer">Netlify</a>.
+        <a href="https://netlify.com" target="_blank" rel="noreferrer">Netlify</a>,{" "}
+        <a href="https://cloudflare.com" target="_blank" rel="noreferrer">Cloudflare</a>.
     </p>
     <p>特别感谢：HoYoverse, YuHengCup, Mar-7th, Fandom.</p>
     <p>本站最近更新时间：{lastUpdate}，方程奇物已经更新至 {mainVersion} 版本.</p>
+    <p>由于站点部署平台为国外的 Netlify 和 Cloudflare，难免遇到网络波动、图片加载异常等问题，敬请谅解。</p>
     <p><del>诚招愿意接手这个项目的小伙伴为爱发电帮忙维护.</del></p>
     <p>3.1 版本官方要出攻略啦😭😭本站的所有努力全部木大了😭😭</p>
 </dialog>
