--- a/src/pages/v3.1/_ui/Header.astro
+++ b/src/pages/v3.1/_ui/Header.astro
@@ -4,11 +4,11 @@
     <span>主页</span>
   </a>
   <a href="/v3.1/blessings" class="title-btn blessings" title="祝福">
-    <div class="icon i-blessing"></div>
+    <div class="icon i-blessing light:invert"></div>
     <span>祝福</span>
   </a>
   <a href="/v3.1/equations" class="title-btn equations" title="方程">
-    <div class="icon i-equation"></div>
+    <div class="icon i-equation light:invert"></div>
     <span>方程</span>
   </a>
   <a href="/v3.1/curios" class="title-btn curios" title="奇物">
