--- a/src/pages/v3.1/_ui/PathEffectCard.astro
+++ b/src/pages/v3.1/_ui/PathEffectCard.astro
@@ -18,6 +18,7 @@ const { item } = Astro.props
     width="100"
     height="100"
     class={clsx("block mx-auto", "light:invert")}
+    loading="lazy"
   />
   <p class="font-bold">{item.E1.Name}</p>
   <p class="text-sm text-fg-secondary">{item.E1.Desc}</p>
