add path to equations

--- a/src/pages/v3.1/_ui/Header.astro
+++ b/src/pages/v3.1/_ui/Header.astro
@@ -15,11 +15,11 @@
     <div class="icon i-curio light:invert"></div>
     <span>奇物</span>
   </a>
-  <a href="/v3.1/effects" class="title-btn effects" title="特性">
+  <a href="/v3.1/effects" class="title-btn effects" title="命途特性">
     <div class="icon i-carbon-aperture"></div>
     <span>特性</span>
   </a>
-  <a href="/v3.1/titan" class="title-btn titan" title="泰坦">
+  <a href="/v3.1/titan" class="title-btn titan" title="金血祝颂">
     <div class="icon i-carbon-bastion-host"></div>
     <span>金血</span>
   </a>
