--- a/src/pages/v3.3/_ui/Layout3-3.astro
+++ b/src/pages/v3.3/_ui/Layout3-3.astro
@@ -10,6 +10,6 @@ const { title } = Astro.props
 <LayoutBase title={title}>
   <Header />
   <p class="text-sm text-fg-secondary text-center">数据为内测版本，不保证准确，精确内容请在
-  <a href="https://mhyurl.cn/9eSIXyPB8" target="_blank">官方页面</a> 查看。</p>
+  <a href="https://www.miyoushe.com/sr/" target="_blank">官方页面</a> 查看。</p>
   <slot />
 </LayoutBase>
