add background for titan

--- a/src/pages/v3.3/titan.astro
+++ b/src/pages/v3.3/titan.astro
@@ -1,7 +1,7 @@
 ---
 import { TITAN } from './_data/titan'
 import Layout from "./_ui/Layout3-3.astro";
-import TitanCard from '@/pages/v3.1/_ui/TitanCard.astro'
+import TitanCard from './_ui/TitanCard.astro'
 ---
 
 <Layout title="金血 差分宇宙模拟工具">
